# page-tracker

./: Dockerfile  Dockerfile.dev  constraints.txt  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
test/: conftest.py
test/integration/: test_app_redis.py
web/: constraints.txt  pyproject.toml
web/src/page_tracker/: app.py
web/test/e2e/: test_app_redis_http.py
web/test/unit/: test_app.py
