# pyproject.toml

[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "page-tracker"
version = "1.0.0"
dependencies = [
    "Flask",
    "redis",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-timeout",
    "bandit",
    "black",
    "flake8",
    "isort",
    "pylint",
]